@@ -347,6 +347,7 @@ libpri channel driver (chan_dahdi) DAHDI changes
  * Added the ability to support call waiting calls.  (The SETUP has no B channel
    assigned.)
  * Added Malicious Call ID (MCID) event to the AMI call event class.
+ * Added Message Waiting Indication (MWI) support for ISDN PTMP endpoints (phones).
 
 Asterisk Manager Interface
 --------------------------
